# knor_knor_bot

./: Cargo.toml  Dockerfile  main.rs
knor_knor_bot/: docker-compose.yml
