[package]
name = "knor_knor_bot"
description = """
knor_knor_bot
"""
version = "0.0.0"

license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "knor_knor_bot"
path = "main.rs"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
